--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 				<div class="img-hover">
 					<img src="assets/img/img1.jpg" class="card-img-top" alt="...">
 				</div>
-				<div class="card-body text-center">
+				<div class="card-body zoom-animate text-center">
 					<h5 class="card-title">Salmon Thuir</h5>
 					<p class="card-text">Senior Agent</p>
 				</div>
@@ -35,7 +35,7 @@
 				<div class="img-hover">
 					<img src="assets/img/img2.jpg" class="card-img-top" alt="...">
 				</div>
-				<div class="card-body text-center">
+				<div class="card-body zoom-animate text-center">
 					<h5 class="card-title">Horke Pels</h5>
 					<p class="card-text">Head Officer</p>
 				</div>
@@ -44,7 +44,7 @@
 				<div class="img-hover">
 					<img src="assets/img/img4.jpg" class="card-img-top" alt="...">
 				</div>
-				<div class="card-body text-center">
+				<div class="card-body zoom-animate text-center">
 					<h5 class="card-title">Sorden Kalos</h5>
 					<p class="card-text">Supervisor</p>
 				</div>
@@ -53,7 +53,7 @@
 				<div class="img-hover">
 					<img src="assets/img/img3 (1).jpg" class="card-img-top" alt="...">
 				</div>
-				<div class="card-body text-center">
+				<div class="card-body zoom-animate text-center">
 					<h5 class="card-title">Nelson Bam</h5>
 					<p class="card-text">Quality Assurance</p>
 				</div>
@@ -71,14 +71,86 @@
 
 	</section>
 
+	<div class="spasi">
+
+	</div>
+
 	<!-- ARTIKEL -->
 	<section aria-label="my-article" class="artikel">
+		<div class="container">
+			<div class="text-center">
+				<h5 class="warnatur-guide">Our Blogs Offers</h5>
+				<h2>Recent<span class="Judultur-guide"> Articles & Posts</span> </h2>
+				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore.
+				</p>
+			</div>
 
+			<div class="d-flex">
+				<div class="card mx-3 underline-animate	">
+					<div class="img-hover">
+						<img src="assets/img/trending10.jpg" class="card-img-top" alt="...">
+					</div>
+					<div class="card-body bg-light ">
+						<h5 class="card-title Judultur-guide">Technology</h5>
+						<h4 class="card-text text-animate font-play">How a developer duo at Deutsche Bank keep remote
+							alive.</h4>
+					</div>
+				</div>
+				<div class="card mx-3 underline-animate	">
+					<div class="img-hover">
+						<img src="assets/img/trending12.jpg" class="card-img-top" alt="...">
+					</div>
+					<div class="card-body bg-light ">
+						<h5 class="card-title Judultur-guide">Inspiration</h5>
+						<h4 class="card-text text-animate font-play">Inspire Runner with Autism Graces of Women's
+							Running
+						</h4>
+					</div>
+				</div>
+				<div class="card mx-3 underline-animate	">
+					<div class="img-hover">
+						<img src="assets/img/trending13.jpg" class="card-img-top" alt="...">
+					</div>
+					<div class="card-body bg-light ">
+						<h5 class="card-title Judultur-guide">Public</h5>
+						<h4 class="card-text text-animate font-play">Services To Grow Your Business Sell Affiliate
+							Products</h4>
+					</div>
+				</div>
+			</div>
+		</div>
 	</section>
+
+
+	<div class="spasi">
+
+	</div>
+
 
 	<!-- PARTNER -->
 	<section aria-label="my-partners" class="partner">
+		<div class="container">
+			<div class="text-center">
+				<h5 class="warnatur-guide">Our Partners</h5>
+				<h2>Our <span class="Judultur-guide">Awesome partners</span> </h2>
+				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore.
+				</p>
+			</div>
 
+			<div class="partner-slick">
+				<div class="slick-item rounded"><img class="px-4 py-2" src="assets/img/cl-1.png" alt=""></div>
+				<div class="slick-item rounded"><img class="px-4 py-2" src="assets/img/cl-2.png" alt=""></div>
+				<div class="slick-item rounded"><img class="px-4 py-2" src="assets/img/cl-3.png" alt=""></div>
+				<div class="slick-item rounded"><img class="px-4 py-2" src="assets/img/cl-4.png" alt=""></div>
+				<div class="slick-item rounded"><img class="px-4 py-2" src="assets/img/cl-5.png" alt=""></div>
+				<div class="slick-item rounded"><img class="px-4 py-2" src="assets/img/cl-1.png" alt=""></div>
+				<div class="slick-item rounded"><img class="px-4 py-2" src="assets/img/cl-2.png" alt=""></div>
+				<div class="slick-item rounded"><img class="px-4 py-2" src="assets/img/cl-3.png" alt=""></div>
+				<div class="slick-item rounded"><img class="px-4 py-2" src="assets/img/cl-4.png" alt=""></div>
+				<div class="slick-item rounded"><img class="px-4 py-2" src="assets/img/cl-5.png" alt=""></div>
+
+			</div>
+		</div>
 	</section>
 
 	<!-- JS LINK -->
