--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 	</head>
 
 	<body>
-    		<!-- NAVBAR -->
-		<nav class="navbar navbar-expand-lg position-fixed z-1 w-100 bg-white">
+		<!-- NAVBAR -->
+		<nav class="navbar navbar-expand-lg position-fixed z-3 w-100 bg-white">
 			<div class="container">
 				<a class="navbar-brand" href="#"><img src="assets/img/logo (1).png" alt="" /></a>
 				<button
@@ -407,7 +407,7 @@
 
 		<!-- PAKET TUR -->
 		<section aria-label="my-package" class="paket-tur"></section>
-    
+
 		<!-- TUR GUIDE -->
 		<section aria-label="my-tourguide" class="tur-guide">
 			<div class="text-center">
@@ -419,7 +419,7 @@
 				</p>
 			</div>
 			<div class="autoplay container">
-				<div class="card mx-3">
+				<div class="card slide_mod">
 					<div class="img-hover">
 						<img src="assets/img/img1.jpg" class="card-img-top" alt="..." />
 					</div>
@@ -428,7 +428,7 @@
 						<p class="card-text">Senior Agent</p>
 					</div>
 				</div>
-				<div class="card mx-3">
+				<div class="card slide_mod">
 					<div class="img-hover">
 						<img src="assets/img/img2.jpg" class="card-img-top" alt="..." />
 					</div>
@@ -437,7 +437,7 @@
 						<p class="card-text">Head Officer</p>
 					</div>
 				</div>
-				<div class="card mx-3">
+				<div class="card slide_mod">
 					<div class="img-hover">
 						<img src="assets/img/img4.jpg" class="card-img-top" alt="..." />
 					</div>
@@ -446,7 +446,7 @@
 						<p class="card-text">Supervisor</p>
 					</div>
 				</div>
-				<div class="card mx-3">
+				<div class="card slide_mod">
 					<div class="img-hover">
 						<img src="assets/img/img3 (1).jpg" class="card-img-top" alt="..." />
 					</div>
@@ -455,11 +455,11 @@
 						<p class="card-text">Quality Assurance</p>
 					</div>
 				</div>
-				<div class="card mx-3">
+				<div class="card slide_mod">
 					<div class="img-hover">
 						<img src="assets/img/img4.jpg" class="card-img-top" alt="..." />
 					</div>
-					<div class="card-body text-center">
+					<div class="card-body zoom-animate text-center">
 						<h5 class="card-title">Cacics Coold</h5>
 						<p class="card-text">Asst.Manager</p>
 					</div>
@@ -534,34 +534,34 @@
 				</div>
 
 				<div class="partner-slick">
-					<div class="slick-item rounded">
+					<div class="slick-item slide_mod rounded">
 						<img class="px-4 py-2" src="assets/img/cl-1.png" alt="" />
 					</div>
-					<div class="slick-item rounded">
+					<div class="slick-item slide_mod rounded">
 						<img class="px-4 py-2" src="assets/img/cl-2.png" alt="" />
 					</div>
-					<div class="slick-item rounded">
+					<div class="slick-item slide_mod rounded">
 						<img class="px-4 py-2" src="assets/img/cl-3.png" alt="" />
 					</div>
-					<div class="slick-item rounded">
+					<div class="slick-item slide_mod rounded">
 						<img class="px-4 py-2" src="assets/img/cl-4.png" alt="" />
 					</div>
-					<div class="slick-item rounded">
+					<div class="slick-item slide_mod rounded">
 						<img class="px-4 py-2" src="assets/img/cl-5.png" alt="" />
 					</div>
-					<div class="slick-item rounded">
+					<div class="slick-item slide_mod rounded">
 						<img class="px-4 py-2" src="assets/img/cl-1.png" alt="" />
 					</div>
-					<div class="slick-item rounded">
+					<div class="slick-item slide_mod rounded">
 						<img class="px-4 py-2" src="assets/img/cl-2.png" alt="" />
 					</div>
-					<div class="slick-item rounded">
+					<div class="slick-item slide_mod rounded">
 						<img class="px-4 py-2" src="assets/img/cl-3.png" alt="" />
 					</div>
-					<div class="slick-item rounded">
+					<div class="slick-item slide_mod rounded">
 						<img class="px-4 py-2" src="assets/img/cl-4.png" alt="" />
 					</div>
-					<div class="slick-item rounded">
+					<div class="slick-item slide_mod rounded">
 						<img class="px-4 py-2" src="assets/img/cl-5.png" alt="" />
 					</div>
 				</div>
